--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PABLO ROSANA // 2026</title>
+    <title>Pablo Rosana</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
         <p class="">🇦🇷🧉💻</p>
         <br><br><br>
         <!-- The Main Text -->
-        <h1 data-text="MEFE_MEFE" id="main-title">MEFE_MEFE</h1>
+        <h1 data-text="MEFE \ MEFE" id="main-title">MEFE \ MEFE</h1>
         
      
         <br><br>
